--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -4,7 +4,16 @@ body {
 
 .mainTitle {
     text-align: center;
-    margin-top: 50px;
+    font-family: 'Maitree', serif;
+    color: rgb(163, 104, 36);
+    font-size: 28px;
+    margin-top: 30px;
+}
+
+.subTitle {
+    text-align: center;
+    font-family: 'Maitree', serif;
+    color: rgb(163, 104, 36);
 }
 
 .signUp {
