--- a/client/src/components/sub-components/BlogListEntry.css
+++ b/client/src/components/sub-components/BlogListEntry.css
@@ -18,6 +18,30 @@
     padding: 0 20px;
 }
 
+.updateDeletePost {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.updatePost button {
+    border-style: solid;
+    color: rgb(145, 140, 140);
+    background-color: rgb(237, 245, 164);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
+    margin: 0 10px;
+}
+
+.deletePost button {
+    border-style: solid;
+    color: white;
+    background-color: rgb(241, 156, 134);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
+    margin: 0 10px;
+}
+
 .commentsText p {
     text-align: left;
     padding-left: 30px;
