--- a/client/src/components/sub-components/BlogListEntry.css
+++ b/client/src/components/sub-components/BlogListEntry.css
@@ -65,3 +65,34 @@
     text-align: left;
     padding-left: 60px;
 }
+
+.updatePostInput {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.submitUpdate button {
+    border-style: solid;
+    color: rgb(145, 140, 140);
+    background-color: rgb(237, 245, 164);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
+    margin: 0 10px;
+}
+
+.updatePostForm input {
+    border-style: solid;
+    padding: 10px;
+    width: 50%;
+    margin: 10px;
+}
+
+.cancelUpdate button {
+    border-style: solid;
+    color: white;
+    background-color: rgb(241, 156, 134);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
+    margin: 0 10px;
+}
