--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -39,9 +39,32 @@
     padding-left: 40px;
 }
 
+.navBar {
+    text-align: right;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    padding-right: 10px;
+}
+
 .profileLink {
     text-align: right;
+    font-family: 'Fira Sans', sans-serif;
     padding-right: 10px;
+}
+
+.myProfileButton {
+    text-align: right;
+    padding-right: 10px;
+    margin: 4px;
+}
+
+.myProfileButton button {
+    border-style: solid;
+    color: rgb(255, 255, 255);
+    background-color: rgb(216, 207, 253);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
 }
 
 .logOut {
@@ -55,4 +78,5 @@
     background-color: rgb(199, 149, 91);
     font-family: 'Fira Sans', sans-serif;
     padding: 6px;
+    margin: 4px;
 }
