--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -5,6 +5,7 @@
 }
 
 .pictureCircle {
+    background-color: rgb(185, 182, 182);
     text-align: center;
     border-style: solid;
     border-radius: 50%;
