--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -6,6 +6,9 @@
 
 .pictureCircle {
     background-color: rgb(185, 182, 182);
+    background-image: url("https://st3.depositphotos.com/6672868/13701/v/600/depositphotos_137014128-stock-illustration-user-profile-icon.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
     text-align: center;
     border-style: solid;
     border-radius: 50%;
