Added background color to mainFeed and createPost

--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -11,6 +11,9 @@
 
 .createPost h2 {
     text-align: left;
+    background-color: rgb(37, 122, 42);
+    color: white;
+    font-size: 26px;
     padding-left: 40px;
 }
 
@@ -36,6 +39,9 @@
 
 .mainFeed h2 {
     text-align: left;
+    font-size: 30px;
+    background-color: rgb(165, 101, 42);
+    color: white;
     padding-left: 40px;
 }
 
