Added conditionals for like and unlike button

--- a/client/src/components/sub-components/BlogListEntry.css
+++ b/client/src/components/sub-components/BlogListEntry.css
@@ -43,6 +43,20 @@
     margin: 0 10px;
 }
 
+.unlikePost {
+    text-align: center;
+    margin: 10px;
+}
+
+.unlikePost button {
+    border-style: solid;
+    color: white;
+    background-color: rgb(143, 144, 146);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 6px;
+    margin: 0 10px;
+}
+
 .updatePost button {
     border-style: solid;
     color: rgb(145, 140, 140);
