--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -41,3 +41,46 @@ body {
     font-family: 'Fira Sans', sans-serif;
     padding: 10px;
 }
+
+@media (max-width: 1430px) {
+    .main {
+        margin-right: 150;
+        margin-left: 150;
+    }
+}
+
+@media (max-width: 1250px) {
+    .main {
+        margin-right: 100;
+        margin-left: 100;
+    }
+}
+
+@media (max-width: 1100px) {
+    .main {
+        margin-right: 60;
+        margin-left: 60;
+    }
+    .signUp {
+        margin: 50px 50px;
+        padding: 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .main {
+        margin-right: 40;
+        margin-left: 40;
+    }
+    .signUp {
+        margin: 0 0;
+        padding: 30px;
+    }
+}
+
+@media (max-width: 650px) {
+    .main {
+        margin-right: 0;
+        margin-left: 0;
+    }
+}
