--- a/client/src/components/login/SignIn.css
+++ b/client/src/components/login/SignIn.css
@@ -27,3 +27,38 @@ body {
     font-family: 'Fira Sans', sans-serif;
     padding: 10px;
 }
+
+@media (max-width: 1430px) {
+    .signIn {
+        margin-right: 150;
+        margin-left: 150;
+    }
+}
+
+@media (max-width: 1250px) {
+    .signIn {
+        margin-right: 100;
+        margin-left: 100;
+    }
+}
+
+@media (max-width: 1100px) {
+    .signIn {
+        margin-right: 100;
+        margin-left: 100;
+    }
+}
+
+@media (max-width: 800px) {
+    .signIn {
+        margin-right: 40;
+        margin-left: 40;
+    }
+}
+
+@media (max-width: 650px) {
+    .signIn {
+        margin-right: 0;
+        margin-left: 0;
+    }
+}
