--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -86,3 +86,48 @@
     padding: 6px;
     margin: 4px;
 }
+
+@media (max-width: 1430px) {
+    .createPost {
+        margin: 10px 250px;
+    }
+    .mainFeed {
+        margin: 10px 225px;
+    }
+}
+
+@media (max-width: 1250px) {
+    .createPost {
+        margin: 10px 200px;
+    }
+    .mainFeed {
+        margin: 10px 175px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .createPost {
+        margin: 10px 150px;
+    }
+    .mainFeed {
+        margin: 10px 125px;
+    }
+}
+
+@media (max-width: 800px) {
+    .createPost {
+        margin: 10px 40px;
+    }
+    .mainFeed {
+        margin: 10px 30px;
+    }
+}
+
+@media (max-width: 650px) {
+    .createPost {
+        margin: 10px 10px;
+    }
+    .mainFeed {
+        margin: 0 0;
+    }
+}
