Adjusted media queries for SignIn and SignUp

--- a/client/src/components/login/SignIn.css
+++ b/client/src/components/login/SignIn.css
@@ -28,6 +28,13 @@ body {
     padding: 10px;
 }
 
+@media (max-width: 1700px) {
+    .signIn {
+        margin-right: 450;
+        margin-left: 450;
+    }
+}
+
 @media (max-width: 1430px) {
     .signIn {
         margin-right: 300;
