--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -42,24 +42,31 @@ body {
     padding: 10px;
 }
 
+@media (max-width: 1700px) {
+    .main {
+        margin-right: 300px;
+        margin-left: 300px;
+    }
+}
+
 @media (max-width: 1430px) {
     .main {
-        margin-right: 150;
-        margin-left: 150;
+        margin-right: 150px;
+        margin-left: 150px;
     }
 }
 
 @media (max-width: 1250px) {
     .main {
-        margin-right: 100;
-        margin-left: 100;
+        margin-right: 100px;
+        margin-left: 100px;
     }
 }
 
 @media (max-width: 1100px) {
     .main {
-        margin-right: 60;
-        margin-left: 60;
+        margin-right: 60px;
+        margin-left: 60px;
     }
     .signUp {
         margin: 50px 50px;
