--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -44,3 +44,45 @@
     padding: 6px;
     margin: 10px 10px;
 }
+
+@media (max-width: 1475px) {
+    .fullProfile {
+        margin: 10px 200px;
+    }
+}
+
+@media (max-width: 1430px) {
+    .fullProfile {
+        margin: 10px 150px;
+    }
+}
+
+@media (max-width: 1250px) {
+    .fullProfile {
+        margin: 10px 100px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .fullProfile {
+        margin: 10px 50px;
+    }
+}
+
+@media (max-width: 800px) {
+    .fullProfile {
+        margin: 10px 30px;
+    }
+    .myProfile {
+        margin: 20px 20px;
+    }
+}
+
+@media (max-width: 650px) {
+    .fullProfile {
+        margin: 0 0;
+    }
+    .myProfile {
+        margin: 0 0;
+    }
+}
