--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -15,7 +15,7 @@ body {
 }
 
 .mainTitle span {
-    background-color: rgb(241, 239, 239);
+    background-color: rgb(234, 253, 216);
     padding: 0 16px;
     border-radius: 20px;
 }
@@ -24,6 +24,12 @@ body {
     text-align: center;
     font-family: 'Maitree', serif;
     color: rgb(163, 104, 36);
+}
+
+.subTitle span {
+    background-color: rgb(249, 250, 202);
+    padding: 0 16px;
+    border-radius: 20px;
 }
 
 .signUp {
