--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -1,3 +1,9 @@
+.fullDashboard {
+    background-image: url("https://imgc.allpostersimages.com/img/posters/spring-branch-with-fresh-green-leaves-isolated-on-white-background_u-L-Q103Y680.jpg?artHeight=550&artPerspective=n&artWidth=550&background=ffffff");
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+}
+
 .dashboard {
     text-align: center;
     font-family: 'Fira Sans', sans-serif;
