--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,5 +1,14 @@
-body {
+/* body {
     background-image: url("https://previews.123rf.com/images/metrue/metrue1506/metrue150600088/41257458-tree-branches-and-green-leaves-background-spring-renewal-concept.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+} */
+
+.app {
+    background-image: url("https://previews.123rf.com/images/metrue/metrue1506/metrue150600088/41257458-tree-branches-and-green-leaves-background-spring-renewal-concept.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
 }
