--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -2,6 +2,13 @@ body {
     background-color: rgb(201, 248, 201);
 }
 
+/* .main {
+    background-image: url("https://previews.123rf.com/images/metrue/metrue1506/metrue150600088/41257458-tree-branches-and-green-leaves-background-spring-renewal-concept.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px;
+} */
+
 .mainTitle {
     text-align: center;
     font-family: 'Maitree', serif;
