--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -1,7 +1,9 @@
-/* body {
+.fullProfile {
     background-image: url("https://imgc.allpostersimages.com/img/posters/spring-branch-with-fresh-green-leaves-isolated-on-white-background_u-L-Q103Y680.jpg?artHeight=550&artPerspective=n&artWidth=550&background=ffffff");
     padding: 10px;
-} */
+    height: 100%;
+    width: 100%;
+}
 
 .myProfilePicture {
     display: flex;
