--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -6,6 +6,9 @@
 } */
 
 .app {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-image: url("https://previews.123rf.com/images/metrue/metrue1506/metrue150600088/41257458-tree-branches-and-green-leaves-background-spring-renewal-concept.jpg");
     background-repeat: no-repeat;
     background-size: cover;
