--- a/client/src/components/login/SignUp.css
+++ b/client/src/components/login/SignUp.css
@@ -13,7 +13,8 @@ body {
     font-family: 'Maitree', serif;
     color: rgb(163, 104, 36);
     font-size: 28px;
-    margin-top: 30px;
+    margin-top: 4px;
+    /* margin-top: 0.01%; */
 }
 
 .mainTitle span {
@@ -62,41 +63,40 @@ body {
 
 @media (max-width: 1700px) {
     .main {
-        margin: 150px 300px;
+        /* margin: 150px 300px; */
+        margin: 2% 18%;
     }
 }
 
 @media (max-width: 1430px) {
     .main {
         /* margin-right: 150px;
-        margin-left: 150px;
-        margin-top: 300px; */
-        margin: 150px;
+        margin-left: 150px; */
+        margin: 2% 10%;
     }
 }
 
 @media (max-width: 1250px) {
     .main {
-        margin-right: 100px;
-        margin-left: 100px;
+        /* margin-right: 100px;
+        margin-left: 100px; */
+        margin: 2% 5%;
     }
 }
 
 @media (max-width: 1100px) {
     .main {
-        margin-right: 60px;
-        margin-left: 60px;
-    }
-    .signUp {
-        margin: 50px 50px;
-        padding: 30px;
+        /* margin-right: 60px;
+        margin-left: 60px; */
+        margin: 2% 2%;
     }
 }
 
 @media (max-width: 800px) {
     .main {
-        margin-right: 40;
-        margin-left: 40;
+        /* margin-right: 40;
+        margin-left: 40; */
+        margin: 1% 7%;
     }
     .signUp {
         margin: 0 0;
@@ -106,7 +106,11 @@ body {
 
 @media (max-width: 650px) {
     .main {
-        margin-right: 0;
-        margin-left: 0;
+        /* margin-right: 0;
+        margin-left: 0; */
+        margin: 0 2%;
+    }
+    .signUp {
+        margin: 1% 2%;
     }
 }
