--- a/client/src/components/login/SignIn.css
+++ b/client/src/components/login/SignIn.css
@@ -1,11 +1,16 @@
-body {
+/* body {
     background-color: rgb(201, 248, 201);
-}
+} */
 
 .fullSignIn {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* width: 100%; */
+    /* background-image: url("https://previews.123rf.com/images/metrue/metrue1506/metrue150600088/41257458-tree-branches-and-green-leaves-background-spring-renewal-concept.jpg");
+    background-repeat: no-repeat; */
+    /* background-size: contain; */
+    background-size: cover;
 }
 
 .signIn {
@@ -14,9 +19,10 @@ body {
     border-style: solid;
     border-color: rgb(199, 149, 91);
     border-width: thick;
-    border-radius: 20px;
+    border-radius: 150px;
     text-align: center;
-    margin: 50px 200px;
+    /* margin: 50px 200px; */
+    margin: 25% 70%;
     padding: 30px;
 }
 
@@ -50,28 +56,32 @@ body {
 
 @media (max-width: 1250px) {
     .signIn {
-        margin-right: 200;
-        margin-left: 200;
+        /* margin-right: 200;
+        margin-left: 200; */
+        margin: 25% 20%;
     }
 }
 
 @media (max-width: 1100px) {
     .signIn {
-        margin-right: 150;
-        margin-left: 150;
+        /* margin-right: 150;
+        margin-left: 150; */
+        margin: 25% 15%;
     }
 }
 
 @media (max-width: 800px) {
     .signIn {
-        margin-right: 40;
-        margin-left: 40;
+        /* margin-right: 40;
+        margin-left: 40; */
+        margin: 25% 10%;
     }
 }
 
 @media (max-width: 650px) {
     .signIn {
-        margin-right: 0;
-        margin-left: 0;
+        /* margin-right: 0;
+        margin-left: 0; */
+        margin: 40% 10%;
     }
 }
