Added border-width and border-color to createPost

--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -14,6 +14,8 @@
     background-color: rgba(252, 231, 192, 0.856); 
     border-style: solid;
     margin: 10px 130px;
+    border-width: 4px 1.25em;
+    border-color: rgb(117, 56, 15);
 }
 
 .createPost h2 {
