--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -60,6 +60,12 @@
     margin: 10px 10px;
 }
 
+@media (max-width: 1700px) {
+    .myProfile {
+        margin: 4% 25%;
+    }
+}
+
 @media (max-width: 1430px) {
     .myProfile {
         margin: 4% 20%;
