Added CSS styling to resetSuccess

--- a/client/src/components/login/ForgotPassword.css
+++ b/client/src/components/login/ForgotPassword.css
@@ -1,5 +1,6 @@
 .fullForgotPassword {
     /* background-color: white; */
+    text-align: center;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -25,4 +26,24 @@
     color: rgb(163, 104, 36);
     font-size: 28px;
     margin-top: 4px;
+}
+
+.forgotPassword input {
+    border-style: none;
+    padding: 10px;
+    width: 70%;
+}
+
+.forgotPassword button {
+    border-style: solid;
+    color: white;
+    background-color: rgb(199, 149, 91);
+    font-family: 'Fira Sans', sans-serif;
+    padding: 10px;
+}
+
+.resetSuccess {
+    color: white;
+    background-color: rgb(117, 159, 250);
+    padding: 4px 10px;
 }
