Added media query to forgotPassword

--- a/client/src/components/login/ForgotPassword.css
+++ b/client/src/components/login/ForgotPassword.css
@@ -18,7 +18,7 @@
     border-width: 1em;
     /* margin: 50px 200px; */
     margin: 20% 10%;
-    padding: 50px;
+    padding: 70px;
 }
 
 .forgotPassword h2 {
@@ -46,4 +46,10 @@
     color: white;
     background-color: rgb(117, 159, 250);
     padding: 4px 10px;
+}
+
+@media (max-width: 530px) {
+    .forgotPassword {
+        margin: 20% 1%;
+    }
 }
