--- a/client/src/components/profile/MyProfile.css
+++ b/client/src/components/profile/MyProfile.css
@@ -33,7 +33,10 @@
 .userHeader h3 {
     font-size: 30px;
     color: white;
-    background-color: rgb(243, 66, 22);
+    background-color: rgb(253, 99, 61);
+    border-style: solid;
+    border-width: thick;
+    border-color: rgb(117, 56, 15);
 }
 
 .userBlogs div {
@@ -45,7 +48,10 @@
     text-align: left;
     color: white;
     background-color: rgb(41, 122, 16);
-    border-bottom: solid;
+    /* border-bottom: solid; */
+    border-style: solid;
+    border-color: rgb(117, 56, 15);
+    border-width: thick;
     margin: 0 30px;
     padding: 10px;
 }
